Fix progress bar height being too low

--- a/default_style.css
+++ b/default_style.css
@@ -409,14 +409,14 @@ div[data-role="controlgroup"] a[data-role="button"]:last-child {
 }
 
 .itemProgressBar {
-  height: 500px;
+  height: 2000em;
   background: #0000;
 }
 .playbackProgress>div {
   background-color: rgba(255,255,255,0.75);
 }
 .transcodingProgress>div, .itemProgressBarForeground {
-  background-color: rgba(255,255,255,0.35);
+  background-color: rgba(255,255,255,0.3);
 }
 .innerCardFooter.fullInnerCardFooter.innerCardFooterClear {
   border-radius: 0px !important; 
